<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cartTitle"
        android:paddingTop="8dp" />


    <TextView
        android:id="@+id/totalCostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_total_placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="72dp"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_payment"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="14dp"
        app:icon="@drawable/ic_cart"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />
</RelativeLayout>